# cryo-vault

./: .gitignore  Cargo.toml  README.md  cross_compile.sh  install-agent-rules.ps1  install-agent-rules.sh  install.ps1  install.sh  stream_events.jsonl  test_chat.json
Skills/auto-capture/: SKILL.md
Skills/store-conversations/: SKILL.md
docs/diagrams/: flush.puml  search.puml  show.puml  stats.puml
src/: index.rs  lib.rs  lock.rs  main.rs  schema.rs
src/storage/: constants.rs  mod.rs  property_tests.rs  tests.rs  types.rs  writer.rs
tests/: cli_tests.rs  mcp_server_tests.rs
