[package]
name = "cryo-vault"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bincode = "1.3"
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4.5.54", features = ["derive", "env"] }
dirs = "6.0.0"
fastbloom = { version = "0.14.1", features = ["serde"] }
fs2 = "0.4.3"
indicatif = "0.18.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.19.0", features = ["serde", "v4"] }
zstd = "0.13.3"

[[bin]]
name = "cryo-vault-mcp"
path = "src/bin/cryo-vault-mcp.rs"



[dev-dependencies]
assert_cmd = "2.1.2"
predicates = "3.1.3"
proptest = "1.5"
tempfile = "3.24.0"

[profile.release]
lto = true
strip = true
codegen-units = 1

